--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_REGION: 'us-west-1'
 
-    - name: CloudFront Invalidation
-      run: |
-        aws configure set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws cloudfront create-invalidation --distribution-id E9JYHLXKXNMHB --paths '/*'
+    - name: Invalidate CloudFront
+      uses: chetan/invalidate-cloudfront-action@v2
       env:
+        DISTRIBUTION: ${{ secrets.DISTRIBUTION }}
+        PATHS: "/index.html"
+        AWS_REGION: "us-east-1"
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
